--- a/BeingSeenApp/app/src/main/res/layout/transactions_recycler_item.xml
+++ b/BeingSeenApp/app/src/main/res/layout/transactions_recycler_item.xml
@@ -42,4 +42,16 @@
         app:layout_constraintStart_toStartOf="@+id/plain_text_recycler_item_text"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/no_transaction_recycler_tiem"
+        android:layout_width="282dp"
+        android:layout_height="61dp"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/plain_text_recycler_item_text"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
