--- a/BeingSeenApp/app/src/main/res/layout/activity_dn_user_profile_view_donation.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_dn_user_profile_view_donation.xml
@@ -115,47 +115,15 @@
         app:layout_constraintTop_toTopOf="parent"
         />
 
-    <ScrollView
-        android:layout_width="409dp"
-        android:layout_height="200dp"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="486dp"
-        app:layout_constraintVertical_bias="1"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/dn_donations_recycler_view"
+        android:layout_width="410dp"
+        android:layout_height="180dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" >
-
-                <TextView
-                    android:id="@+id/SetDnAmount1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="60dp"
-                    android:text="N/A Credit(s)"
-                    android:layout_marginLeft="30dp"
-                    android:textSize="30dp"
-                    android:textColor="@color/green"/>
-                <TextView
-                    android:id="@+id/SetReceiver1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="60dp"
-                    android:text="to N/A"
-                    android:textSize="15dp"
-                    android:layout_marginLeft="30dp"
-                    android:textColor="@color/black"/>
-            </LinearLayout>
-
-        </LinearLayout>
-    </ScrollView>
+        app:layout_constraintTop_toTopOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.989" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
