--- a/BeingSeenApp/app/src/main/res/layout/activity_main.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_main.xml
@@ -47,20 +47,20 @@
         app:layout_constraintVertical_bias="0.285"
         app:navGraph="@navigation/mobile_navigation" />
 
-    <Button
-        android:id="@+id/aboutus_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="96dp"
-        android:text="AboutUS"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.947"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LoginButton"
-        app:layout_constraintVertical_bias="0.995"
-        tools:visibility="visible" />
+<!--    <Button-->
+<!--        android:id="@+id/aboutus_btn"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginBottom="96dp"-->
+<!--        android:text="AboutUS"-->
+<!--        android:visibility="visible"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.947"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/LoginButton"-->
+<!--        app:layout_constraintVertical_bias="0.995"-->
+<!--        tools:visibility="visible" />-->
 
     <Button
         android:id="@+id/LoginButton"
