--- a/BeingSeenApp/app/src/main/res/layout/activity_dn_content_page_card.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_dn_content_page_card.xml
@@ -12,9 +12,8 @@
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="255dp"
-        android:padding="16dp"
-        >
+        android:layout_height="259dp"
+        android:padding="16dp">
 
         <ImageView
             android:id="@+id/proPic"
@@ -50,8 +49,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/goalTitle"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="21dp"
+
+            android:layout_marginTop="18dp"
             android:text="percentage"
             android:textColor="@color/black"
             android:textSize="20sp" />
@@ -59,20 +58,22 @@
         <ProgressBar
             android:id="@+id/progressBar"
             style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            android:layout_width="395dp"
-            android:layout_height="40dp"
+            android:layout_width="249dp"
+            android:layout_height="35dp"
             android:layout_below="@id/goalTitle"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="12dp"
             android:layout_toEndOf="@id/progress"
             android:progressTint="@color/green" />
 
         <TextView
             android:id="@+id/gDescription"
-            android:layout_width="395dp"
-            android:layout_height="80dp"
+            android:layout_width="385dp"
+            android:layout_height="113dp"
             android:layout_below="@id/progressBar"
             android:layout_alignParentBottom="true"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="0dp"
             android:text="description"
             android:textColor="@color/black"
             android:textSize="20sp" />
