--- a/BeingSeenApp/app/src/main/res/layout/activity_cash_conversion.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_cash_conversion.xml
@@ -15,17 +15,16 @@
       android:layout_marginTop="120dp"
       android:layout_marginEnd="50dp"
       android:layout_marginBottom="32dp"
-      android:text="receiver"
+      android:text="Amount"
       android:textAppearance="@style/TextAppearance.AppCompat.Display2"
       android:textColor="@color/black"
       app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintBottom_toTopOf="@+id/convertConfirm"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.5"
-      app:layout_constraintVertical_bias="0.2"
-      app:layout_constraintBottom_toTopOf="@+id/convertConfirm"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      />
+      app:layout_constraintVertical_bias="0.2" />
 
   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="217dp"
