--- a/BeingSeenApp/app/src/main/res/layout/activity_cash_conversion_status.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_cash_conversion_status.xml
@@ -28,7 +28,7 @@
       android:layout_marginStart="40dp"
       android:layout_marginTop="32dp"
       android:layout_marginEnd="40dp"
-      android:text="Your transaction is successfully done"
+      android:text="Your conversion is successfully done"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/cash_conversion_status" />
