--- a/BeingSeenApp/app/src/main/res/layout/content_recycler_item.xml
+++ b/BeingSeenApp/app/src/main/res/layout/content_recycler_item.xml
@@ -4,14 +4,20 @@
     android:layout_width="match_parent"
     android:layout_margin="5dp"
     android:layout_height="match_parent"
+    card_view:cardBackgroundColor="#00000000"
     card_view:cardUseCompatPadding="true"
-    card_view:cardElevation="3dp"
+    card_view:cardElevation="0dp"
     card_view:cardCornerRadius="3dp">
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="190dp"
         android:padding="16dp"
+        android:background="@drawable/pf_info_border"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         >
 
         <TextView
